After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725671 - find_nearest_city gives segfault error
find_nearest_city gives segfault error
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: future
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2014-03-04 17:29 UTC by Saurabh_P
Modified: 2014-03-10 16:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
This solves segfault error (1.41 KB, patch)
2014-03-04 17:51 UTC, Saurabh_P
committed Details | Review

Description Saurabh_P 2014-03-04 17:29:49 UTC
When I try to use find_nearest_city method of gweather_location it gives segfault error.
Comment 1 Saurabh_P 2014-03-04 17:51:20 UTC
Created attachment 270927 [details] [review]
This solves segfault error
Comment 2 Giovanni Campagna 2014-03-04 18:08:11 UTC
Review of attachment 270927 [details] [review]:

Looks good to me.
Comment 3 Giovanni Campagna 2014-03-10 16:54:54 UTC
Pushed.