Modifying the way of traversing through all Weather-stations

Change the way of iterating in for loop.

https://bugzilla.gnome.org/show_bug.cgi?id=725671